# test_bd

./: .gitignore  pyproject.toml
src/vc_models/: base.py  card.py  config.py  migrate.py  transaction.py
src/vc_models/alembic/: env.py
src/vc_models/alembic/versions/: 45a13db097ab_init.py  e80a617b51c4_init.py
src/vc_models/choices/: card.py  transaction.py
