[tool.poetry]
name = "virtual-cards-models"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "virtual_cards_models"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
pydantic = "^1.10.9"
psycopg2 = "^2.9.6"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
